kubernetes/manifests/00-namespace-clickhouse.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clickhouse
  labels:
    name: database
